apisaleor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: mail-image
          image: jaegertracing/all-in-one:latest       
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 14268
              protocol: TCP
            - containerPort: 9411
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
    - name: udp-5775
      protocol: UDP
      port: 5775
      targetPort: 5775
    - name: udp-6831
      protocol: UDP
      port: 6831
      targetPort: 6831
    - name: udp-6832
      protocol: UDP
      port: 6832
      targetPort: 6832
    - name: tcp-5778
      protocol: TCP
      port: 5778
      targetPort: 5778
    - name: tcp-16686
      protocol: TCP
      port: 16686
      targetPort: 16686
    - name: tcp-14268
      protocol: TCP
      port: 14268
      targetPort: 14268
    - name: tcp-9411
      protocol: TCP
      port: 9411
      targetPort: 9411
