dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deploy
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: dash
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: dash
    spec:
      containers:
        - name: mail-image
          image: ghcr.io/saleor/saleor-dashboard:latest 
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: dash-svc
spec:
  selector:
    app: dash
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
