mailtip.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-deploy
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: mailtrip-image
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: mailtrip-image
    spec:
      containers:
        - name: mail-image
          image: axllent/mailpit:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8025
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: mailtrip-svc
spec:
  selector:
    app: mailtrip-image
  ports:
    - protocol: TCP
      port: 8025
      targetPort: 8025
