ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: saleor
  rules:
    - http:
        paths:
          - path: /dash(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dash-svc
                port:
                  number: 80
          - path: /saleor(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: saleor-svc
                port:
                  number: 8000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
          - path: /postgres(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: postgres-svc
                port:
                  number: 5432
          - path: /redis(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: redis-svc
                port:
                  number: 6379
